--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
