--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "material-ui": "^0.18.3",
+    "pouchdb": "^6.2.0",
     "pubsub-js": "^1.5.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
