--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "timezone": "^1.0.6",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
