--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "gh-deploy": "npm run build && ./travis-ci_auto-publish.sh",
+    "gh-deploy": "npm run build && ./travis-ci_auto-publish.sh"
   }
 }
