--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "gh-deploy": "npm run build && ./travis-ci_auto-publish.sh"
+    "eject": "react-scripts eject"
   }
 }
